--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  permission_handler: ^5.1.0+2
+  permission_handler: ^8.1.0
 
 dev_dependencies:
   flutter_test:
