--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/flutter-moum/flutter_screenshot_callback
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=2.2.0 <3.0.0"
+  flutter: ">=2.2.0"
 
 dependencies:
   flutter:
