--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,3 +45,10 @@ dependencies {
 repositories {
     mavenCentral()
 }
+
+configurations.all {
+    resolutionStrategy {
+       force "androidx.core:core:1.6.0"
+       force 'androidx.core:core-ktx:1.6.0'
+    }
+}
