--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,6 +35,8 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+
+    namespace 'com.flutter.moum.screenshot_callback'
 }
 
 dependencies {
